--- a/index.html
+++ b/index.html
@@ -1,54 +1,10 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<style>
-			.width250 {
-				 width: 250px;
-				}
-			.solid {
-				border-style: solid;
-				}
-			.listinline {
-				display: inline;
-				}
-			.nobullets {
-  				list-style-type: none;
-  				margin: 0;
-  				padding: 0;
-				}
-			.textcenter {
-  				text align: center;
-				}
-
-		</style>
-	</head>
-	<body>
-		<svg height="48" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="48" data-view-component="true" class="octicon octicon-mark-github">
-    			<path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-		</svg>
-		<h1>Sign into Github</h1>
-
-		<div>
-			<p class="solid"
-			<form>
-  				<label for="fname">username or email address:</label><br>
-  				<input type="text" id="fname" name="fname" value=""><br>
-  				<label for="lname">password:</label><br>
-  				<input type="text" id="lname" name="lname" value="">
-			</form>
-		</div>
-
-		<div class="solid">
-  			New to Github? Create an account
-		</div>
-
-		<ul class="nobullets listinline">
-  			<li><a href="https://docs.github.com/en/site-policy/github-terms/github-terms-of-service" target="_blank"> terms</a></li>
-  			<li><a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank"> Privacy</a></li>
-  			<li><a href="https://github.com/security" target="_blank"> Security</a></li>
-  			<li><a href="https://support.github.com/?tags=dotcom-direct" target="_blank"> Contact Github</a></li>
-		</ul>
-
-
+	<body> 
+		<button onclick="document.getElementById('id1').style.color = 'red'">red</button>
+		<button onclick="document.getElementById('id1').style.color = 'blue'">blue</button>		
+		<button onclick="document.getElementById('id1').style.textAlign = 'center'">center</button>
+		<button onclick="document.getElementById('id').style.textAlign ='left'">left</button>
+		<
+		<p id="id1"> dehtsetse </p>
 	</body>
 </html>
