--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <html>
 	<body> 
+		<style>
+			.btn-group .button {
+			  background-color: none; 
+			  border: 1px solid rgb(116, 78, 125);
+			  color: purple;
+			  padding: 15px 32px;
+			  text-align: center;
+			  text-decoration: none;
+			  display: inline-block;
+			  font-size: 16px;
+			  cursor: pointer;
+			  float: none; Left
+
+		</style>
 		<button onclick="document.getElementById('id1').style.color = 'red'">red</button>
-		<button onclick="document.getElementById('id1').style.color = 'blue'">blue</button>		
-		<button onclick="document.getElementById('id1').style.textAlign = 'center'">center</button>
-		<button onclick="document.getElementById('id').style.textAlign ='left'">left</button>
-		<
-		<p id="id1"> dehtsetse </p>
+		<button onclick="document.getElementById('id1').style.color = 'blue'">blue</button>	
+		<button onclick="document.getElementById('id1').style.textAlign ='left'">Left</button>
+		<button onclick="document.getElementById('id1').style.textAlign ='center'">Center</button>
+		<button onclick="document.getElementById('id1').style.textAlign ='right'">Right</button>
+		<button onclick="document.getElementById('id1').style.textTransform ='capitalize'">Capitalized</button>
+		<button onclick="document.getElementById('id1').style.textTransform ='lowercase'">Lower case</button>
+		<button onclick="document.getElementById('id1').style.textTransform ='uppercase'">Upper case</button>
+		<button onclick="document.getElementById('id1').style.fontWeight ='bold'">Bold</button>
+		<button onclick="document.getElementById('id1').style.fontStyle ='italic'">Italic</button>
+		<button onclick="document.getElementById('id1').style.textTransform ='clear text'">Clear text</button>
+		<div class=""		
+		<p id="id1"> Dehtsetse </p>
 	</body>
 </html>
